<resources>
    <string name="activateBluetooth">Please, activate the Bluetooth!</string>
    <string name="connectBluetooth">Please, connect to a device</string>
    <string name="connectionLost">Connection lost!</string>
    <string name="searchingFinished">Searching finished!</string>
    <string name="deviceNotFound">No device found!</string>
    <string name="connectionFailed">Bluetooth connection failed!</string>
    <string name="connectedTo">"Connected to: "</string>
    <string name="outStreamNull">" - outStream is Null."</string>

    <string name="menu1">Paired devices</string>
    <string name="menu2">Search devices</string>
    <string name="menu3">Settings</string>

    <string name="methods">Connection method:</string>
    <string name="method1" translatable="false">createRfcommSocketToServiceRecord</string>
    <string name="method2" translatable="false">createInsecureRfcommSocketToServiceRecord</string>
    <string name="method3" translatable="false">createRfcommSocket</string>
    <string name="method4" translatable="false">createInsecureRfcommSocket</string>

    <string name="setting1" translatable="false">connectionMethod</string>
</resources>
